# Qtify-Light

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  models.py  views.py
app/static/: ajax-search.js  style.css
app/templates/: index.html  join.html  room.html  search-result.html
